@@ -26,6 +26,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - Reformat source onmainwindow.cpp.
     - Disable settings editing if a directory with central settings is exists.
     - Format long names on session buttons.
+    - Central settings for Linux, Mac and Windows.
 
   [ Mike Gabriel ]
   * New upstream release (4.0.5.1):
